<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LingoParents</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="terms_privacy_bottom_text">By signing in to lingoparents you agree to our Terms &amp; Conditions and Privacy Policy</string>
    <string name="new_to_lingoparents">New to lingoparents? Register Now!</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_and_we_will_send_you_instructions_to_reset_your_password">Enter your email and we will send you instructions to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acoount_setting">Acoount Setting</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="insight">Insight</string>
    <string name="course">Course</string>
    <string name="progress">Progress</string>
    <string name="view_all">View All</string>
    <string name="live_event">Live Event</string>
    <string name="show_more">Show more</string>
    <string name="children">Children</string>
    <string name="_1s_years_old">(%1s years old)</string>
    <string name="relationship_1s">Relationship : %1s</string>
    <string name="_1s_sublevel_2s">%1s - Sublevel %2s</string>
    <string name="learning_progress"><![CDATA[Learning Progress >]]></string>
    <string name="learn_a_language_now">Learn a language now!</string>
    <string name="learn_the_language_that_your_children_fancy_on_the_time_you_wish_and_the_place_you_like_lingotalk_offer_all_the_flexibility_at_your_fingertip_lets_start_learning_now">Learn the language that your children fancy, on the time you wish, and the place you like! LingoTalk offer all the flexibility at your fingertip. Lets start learning now!</string>
    <string name="enroll_course">Enroll Course</string>
    <string name="search">Search</string>
    <string name="tab_progress_text_1">Profile</string>
    <string name="tab_progress_text_2">Progress</string>
    <string name="tab_progress_course_list_text_1">Korean</string>
    <string name="tab_progress_course_list_text_2">German</string>
    <string-array name="session_name">
        <item>Session 1</item>
        <item>Session 2</item>
        <item>Session 3</item>
        <item>Session 4</item>
        <item>Session 5</item>
    </string-array>
    <string-array name="session_shortdesc">
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
    </string-array>
    <string-array name="session_desc">
        <item tools:ignore="Typos">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</item>
        <item tools:ignore="Typos">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</item>
        <item tools:ignore="Typos">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</item>
        <item tools:ignore="Typos">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</item>
        <item tools:ignore="Typos">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</item>
    </string-array>
    <string-array name="session_score">
        <item>90</item>
        <item>99</item>
        <item>60</item>
        <item>60</item>
        <item>50</item>
    </string-array>
    <string-array name="question_number">
        <item>1. Question 1</item>
        <item>1. Question 1</item>
        <item>1. Question 1</item>
    </string-array>
    <string-array name="question_studentanswer">
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
    </string-array>
    <string-array name="question_correctanswer">
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
        <item>lorem ipsum</item>
    </string-array>
    <string name="your_personal_information">Your Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="hello">Hello,</string>
    <string name="parent">Parent!</string>
    <string name="account_setting_tab_text_1">Profile</string>
    <string name="account_setting_tab_text_2">Change Password</string>
    <string name="parent_s_name">Parent\'s name</string>
    <string name="parents_email_com">parents@email.com</string>
    <string name="parent_s_address">Parent\'s Address</string>
    <string name="parent_s_number">Parent\'s Number</string>
    <string name="account_setting">Account Setting</string>
    <string name="detail_event">Detail Event</string>
    <string name="date_amp_time"><![CDATA[Date & Time:]]></string>
    <string name="price">Price</string>
    <string name="idr">IDR</string>
    <string name="speaker">Speaker</string>
    <string name="description">Description</string>
    <string name="pt_markplus_indonesia">PT Markplus Indonesia</string>
    <string name="marketing_managers">Marketing Managers</string>
    <string name="long_paragraph_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rhoncus quam eu malesuada consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rhoncus quam eu malesuada consectetur.</string>
    <string name="olivia_putri_rosmala">Olivia Putri Rosmala</string>
    <string name="down_the_rabbit_hole_of_multinational_start_up_recruitment">Down the Rabbit Hole of Multinational Start-Up Recruitment</string>
    <string name="_30_oct_2021_17_30">30 Oct 2021, 17.30</string>
    <string name="_99_000">99.000</string>
    <string name="detail_insight">Insight Detail</string>
    <string name="report">Report</string>
    <string name="add_comment">Add Comment</string>
    <string name="comments">Comments</string>
    <string name="post">Post</string>
    <string name="student_profile">Student Profile</string>
    <string name="no_upcoming_events">No Upcoming Events</string>
    <string name="no_completed_events">No Completed Events</string>
    <string name="no_live_events">No Live Events</string>
    <string name="no_insight">No Insight At The Moment</string>
    <string name="no_course_list">No Course Information Available At The Moment</string>
    <string name="no_parenting_insight">No Parenting Insight At The Moment</string>
    <string name="no_lifestyle_insight">No Lifestyle Insight At The Moment</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reply">Reply</string>
    <string name="please_fill_the_form">Please Fill The Form</string>
    <string name="email_should_be_fill">Email*</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="enter_voucher_code">Enter Voucher Code</string>
    <string name="payment_method">Payment Method</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="dashboard_no_children_data">No Children Data Available</string>
    <string name="dashboard_no_recent_insight">No Recent Insight Available</string>
    <string name="dashboard_no_live_event">No Event Available</string>
    <string name="dummy_beginner_sublevel_2">Beginner - Sublevel 2</string>
    <string name="dummy_010_987">010–987</string>
    <string name="dummy_janedoe_gmail_com">janedoe@gmail.com</string>
    <string name="dummy_sesame_street_no_76_east_jakarta_13782">Sesame Street No. 76 East Jakarta, 13782</string>
    <string name="dummy_john_doe">John Doe</string>
    <string name="gender">Gender</string>
    <string name="level_divider">-</string>
    <string name="shimmer_course_placeholder">Placeholder</string>
    <string name="total_learning_hours">Total Learning Hours</string>
    <string name="dummy_3_hours">3 Hours</string>
    <string name="total_hours_to_complete">Total Hours to Complete</string>
    <string name="dummy_3_modules">3 Modules</string>
    <string name="total_module_to_complete">Total Module to Complete</string>
    <string name="dummy_7_hours">7 Hours</string>
    <string name="no_score_text">Student not complete the session</string>
    <string name="tutor_name">Tutor Name:</string>
    <string name="dummy_eleanor_pena">Eleanor Pena</string>
    <string name="tutor_name_title">Tutor Name :</string>
    <string name="session_schedule">Session Schedule :</string>
    <string name="assignment">Assignment</string>
    <string name="attendance">Attendance :</string>
    <string name="student_score">Student Score :</string>
    <string name="assignment_feedback">Assignment Feedback:</string>
    <string name="session_feedback">Session Feedback:</string>
    <string name="notes">Notes:</string>
    <string name="you_have_no_children_connected">You have no children connected</string>
    <string name="student_not_joined_any_class_yet">Student not joined any class yet</string>
    <string name="title_learning_progress">Learning Progress</string>
    <string name="select_your_payment_method">Select Your Payment Method</string>
    <string name="dummy_price_live_event">50000</string>
    <string name="dummy_date">12–12–2021</string>
    <string name="language">Language</string>
    <string name="google_client_id">401776833845-cgqt5ephhprpfmmiuj3vk0eljneq3vu3.apps.googleusercontent.com</string>
    <string name="google_client_secret" tools:ignore="Typos">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</string>
    <string name="show_replies">Show Replies</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="ufo_green">Correct Answer: lorem ipsum</string>
    <string name="student_answer_lorem_ipsum">Student Answer: lorem ipsum</string>
    <string name="_1_question_1">1. Question 1?</string>
    <string name="insight_title_">Insight Title</string>
    <string name="children_name">Children Name</string>
    <string name="_12">12</string>
    <string name="mother">Mother</string>
    <string name="beginner">Beginner</string>
    <string name="lorem_ipsum_lorem_ipsum_loremsdfsdfsdfdsfsdfdsfd_ipsum_lorem_ipsum">lorem ipsum lorem ipsum loremsdfsdfsdfdsfsdfdsfd ipsum lorem ipsum</string>
    <string name="score_90">Score 90</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="session_7">Session 7</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="beginner_sublevel_2">Beginner - Sublevel 2</string>
    <string name="_19">19</string>
    <string name="enter_code">Enter Code</string>
    <string name="invite">Invite</string>
    <string name="pending_invitation_message">Once the person is accepted,\nyou will receive an email notification</string>
</resources>